bugfix RTMD-47 - preserve whitespace on confirm page
This ticket was reopened as the original fix involved preserving whitespace from user input, but this was still being stripped when rendering on the confirm page.

* added style rule white-space: pre-wrap to confirmation table cells
* removed white space in table template

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -20,7 +20,11 @@ textarea {
 }
 
 .confirmation h3 {
-  color: #6f777b
+  color: #6f777b;
+}
+
+.confirmation table td {
+  white-space: pre-wrap;
 }
 
 .confirmation div {
